# pi_ntp

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
back_pages/AIApp/Utils/: gemini_api_utils.py
pages/: 1_Integration Project.py  1_Integration_Project.py  2_Analitica.py  3_App Gemini.py  5_App Consumo de Appi.py  5_App Consumo mockAPI.py
pages_components/AIApp/: ask_to_gemini.py
