[project]
name = "pi-ntp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.38.0",
    "google-generativeai>=0.8.5",
    "plotly-express>=0.4.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "ultralytics>=8.3.205",
]
